tests/NormalTests/paczka1/fuzzy1/38239411.err
Error in line 13: XOw50FhHp A438 44,8
Error in line 24: VL8 A248 121,28
Error in line 23: 7iQN A246 18,8
Error in line 22: A438 A248 60,5
Error in line 14: XOw50FhHp A610 28,0
Error in line 35: P1rSRjoiv A248 9,3
